--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,14 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
+#[Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
 x64/
 x86/
 bld/
-[Bb]in/
+#[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -324,3 +324,7 @@ ASALocalRun/
 
 # custom
 *.log
+/src/WebApplication1/bin/Debug/netcoreapp2.1/WebApplication1.deps.json
+/src/WebApplication1/bin/Debug/netcoreapp2.1/WebApplication1.dll
+/src/WebApplication1/bin/Debug/netcoreapp2.1/WebApplication1.runtimeconfig.dev.json
+/src/WebApplication1/bin/Debug/netcoreapp2.1/WebApplication1.runtimeconfig.json
